Updating sponsors page format
Updating sponsors page format

--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -11,8 +11,8 @@ import Text from "../components/Text";
 <img src={sponsorImage} style="display: block; margin-left: auto;  margin-right: auto;  width: 50%;" />
 
 We are a volunteer-run developer conference in the Columbus, OH area with a focus on JavaScript based technologies.
-It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on <Text my={20}>Thursday, August 19, 2021 and Friday, August 20, 2021</Text>!
-Our mission is to bring together a diverse group of around <Text my={20}>200 </Text>JavaScript developers and friends to learn new skills and concepts
+It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Thursday, August 19, 2021 and Friday, August 20, 2021!
+Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts
 and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive,
 and dynamic tech scene throughout the mid-west and beyond.
 
@@ -26,17 +26,17 @@ in bringing this about.
 | :-------------------------------------------- | :-----------: | :--------------: | :---------------: | :-------: |
 | # Available                                   | <Text my={20}>2</Text>             | <Text my={20}>3</Text>                | <Text my={20}>4 </Text>                |<Text my={20}> 6   </Text>      |
 | Company Logo and Description on our website   | ✅            | ✅                | ✅                | Logo Only |
-| Number of Complimentary Tickets               | 4             | 2                | 2                 |           |
+| Number of Complimentary Tickets               |<Text my={20}> 4   </Text>          | <Text my={20}>2 </Text>               |  <Text my={20}>2  </Text>   |           |
 | 10% off Additional Conference Passes          | ✅            | 🔴                | 🔴                | 🔴        |
-| % of Sponsorship to benefit BootCamp Students | 10%           | 10%              | 10%               | 5%        |
-| Minimum mentions in Social Media              | 5             | 3                | 2                 | 1         |
-| Logo shown between sessions (rotation rate)   | 5 times       | 3 times          | 1 time            | 🔴        |
+| % of Sponsorship to benefit BootCamp Students | <Text my={20}>10%  </Text>         |<Text my={20}> 10%  </Text>            | <Text my={20}> 10%   </Text>           | <Text my={20}>5%  </Text>      |
+| Minimum mentions in Social Media              | <Text my={20}>5  </Text>           | <Text my={20}>3 </Text>               | <Text my={20}>2   </Text>              | <Text my={20}>1   </Text>      |
+| Logo shown between sessions (rotation rate)   | <Text my={20}>5 times </Text>      | <Text my={20}>3 times  </Text>        | <Text my={20}>1 time </Text>           | 🔴        |
 | Mentions in Conference Emails                 | ✅            | ✅               | ✅                 | 🔴        |
 | Booth at main conference                      | Top Placement | Higher Placement | Regular Placement | 🔴        |
 | Attendee bag insert                           | ✅            | ✅               | ✅                 | 🔴        |
 | Display of Logo on Eventbrite Ticketing Page  | ✅            | ✅               | 🔴                 | 🔴        |
-| One Workshop or Session slot *                | 1st Choice    | 2nd Choice       | 🔴                | 🔴        |
-| Price                                         | $3,000        | $2,500           | $2,000            | $1,000    |
+| One Workshop or Session slot *                | <Text my={20}>1st Choice  </Text>   | <Text my={20}>2nd Choice </Text>      | 🔴                | 🔴        |
+| Price                                         | <Text my={20}>$3,000  </Text>      | <Text my={20}>$2,500 </Text>          | <Text my={20}>$2,000</Text>            | <Text my={20}>$1,000 <Text>   |
 
 ### Add-On Sponsorships
 
@@ -44,11 +44,11 @@ in bringing this about.
 
 | Add-On            | Cost      | Availalble | Benefits |
 |-------------------|-----------|------------|----------|
-| Speaker Dinner    | $1,500    | 1          | We love our speakers. Without them, we cannot do things like this. Sponsoring the Speaker Dinner your company will get: <ul><li>Exclusive Logo placement at Speaker Dinner</li><li>A short introduction of company</li><li>Attendance for 2-3 of your reps for opportunity to mingle with the speakers</li></ul> |
-| Lanyards          | $500      | 1          | Your company logo on attendee lanyards |
-| Breakfast         | $500      | 2          | Who can learn on an empty stomach? We know we can't. Sponsoring our main conference continental breakfast helps energize and prepare attendees for the day ahead of them. By sponsoring our breakfast, you'll get:<ul><li>Prominent placement of your company information with the food</li><li>The ability to put a table tent or sheet on tables in the main hall</li><li>A special place for some SWAG items at the end of the food tables (if desired)</li></ul> |
-| Lunch             | $1,000    | 4          | Everyone needs to eat! By becoming our lunch sponsor, you will be held in the highest esteem by our attendees. Benefits Include: <ul><li>The prominent display of your company information with the food</li><li>A short introduction of your company during lunch by you</li><li>The ability to add Table Tents or information sheet on the dining tables in the main hall</li></ul> |
-| Beverage Bar      | $500      | 2          | Staying hydrated is so important for everyone. Would you like to be known as the company that ensured the caffeine continued to flow throughout the day? If so, we'd love to have you as our Beverage Bar sponsor! Benefits include: <ul><li>The prominent display of your company information at the beverage stations</li><li>The undying appreciation from attendees keeping them caffeinated and hydrated</li></ul> |
+| Speaker Dinner    | <Text my={20}>$1,500  </Text>  | <Text my={20}>1   </Text>       | We love our speakers. Without them, we cannot do things like this. Sponsoring the Speaker Dinner your company will get: <ul><li>Exclusive Logo placement at Speaker Dinner</li><li>A short introduction of company</li><li>Attendance for 2-3 of your reps for opportunity to mingle with the speakers</li></ul> |
+| Lanyards          | <Text my={20}>$500 </Text>     | <Text my={20}>1  </Text>        | Your company logo on attendee lanyards |
+| Breakfast         | <Text my={20}>$500 </Text>     | <Text my={20}>2  </Text>        | Who can learn on an empty stomach? We know we can't. Sponsoring our main conference continental breakfast helps energize and prepare attendees for the day ahead of them. By sponsoring our breakfast, you'll get:<ul><li>Prominent placement of your company information with the food</li><li>The ability to put a table tent or sheet on tables in the main hall</li><li>A special place for some SWAG items at the end of the food tables (if desired)</li></ul> |
+| Lunch             |<Text my={20}> $1,000 </Text>    |<Text my={20}> 4  </Text>        | Everyone needs to eat! By becoming our lunch sponsor, you will be held in the highest esteem by our attendees. Benefits Include: <ul><li>The prominent display of your company information with the food</li><li>A short introduction of your company during lunch by you</li><li>The ability to add Table Tents or information sheet on the dining tables in the main hall</li></ul> |
+| Beverage Bar      | <Text my={20}>$500 </Text>     | <Text my={20}>2   </Text>       | Staying hydrated is so important for everyone. Would you like to be known as the company that ensured the caffeine continued to flow throughout the day? If so, we'd love to have you as our Beverage Bar sponsor! Benefits include: <ul><li>The prominent display of your company information at the beverage stations</li><li>The undying appreciation from attendees keeping them caffeinated and hydrated</li></ul> |
 | I have an idea!   | Priceless |            | Do you have an idea that we haven't thought of for sponsorship? If so, let's talk about how you feel you can get the most value out of your sponsorship. Help us help you help us! |
 
 ### Registration Statistics
@@ -60,7 +60,7 @@ in bringing this about.
 ### Where is my money going?
 
 Proceeds from JS&Friends will be used to help cultivate the developer community in the Midwestern United States and beyond.
-Since this is our second year, this could mean putting the money into expanded speaker and attendee benefits and outreach for next year.
+Since this is our third year, this could mean putting the money into expanded speaker and attendee benefits and outreach for next year.
 It could mean helping aspiring programmers through bootcamp scholarships.
 It could mean sponsoring local Meetup groups around JavaScript and related technologies.
 We’re excited about the possibilities, and we welcome your input!
