Fixed build error
Fixed build error

--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -36,7 +36,7 @@ in bringing this about.
 | Attendee bag insert                           | ✅            | ✅               | ✅                 | 🔴        |
 | Display of Logo on Eventbrite Ticketing Page  | ✅            | ✅               | 🔴                 | 🔴        |
 | One Workshop or Session slot *                | <Text my={20}>1st Choice  </Text>   | <Text my={20}>2nd Choice </Text>      | 🔴                | 🔴        |
-| Price                                         | <Text my={20}>$3,000  </Text>      | <Text my={20}>$2,500 </Text>          | <Text my={20}>$2,000</Text>            | <Text my={20}>$1,000 <Text>   |
+| Price                                         | <Text my={20}>$3,000  </Text>      | <Text my={20}>$2,500 </Text>          | <Text my={20}>$2,000</Text>            | <Text my={20}>$1,000 </Text>   |
 
 ### Add-On Sponsorships
 
