Included Zoom Pro Subscription details
Included Zoom Pro Subscription details

--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -49,6 +49,7 @@ in bringing this about.
 | Breakfast         | <Text my={20}>$500 </Text>     | <Text my={20}>2  </Text>        | Who can learn on an empty stomach? We know we can't. Sponsoring our main conference continental breakfast helps energize and prepare attendees for the day ahead of them. By sponsoring our breakfast, you'll get:<ul><li>Prominent placement of your company information with the food</li><li>The ability to put a table tent or sheet on tables in the main hall</li><li>A special place for some SWAG items at the end of the food tables (if desired)</li></ul> |
 | Lunch             |<Text my={20}> $1,000 </Text>    |<Text my={20}> 4  </Text>        | Everyone needs to eat! By becoming our lunch sponsor, you will be held in the highest esteem by our attendees. Benefits Include: <ul><li>The prominent display of your company information with the food</li><li>A short introduction of your company during lunch by you</li><li>The ability to add Table Tents or information sheet on the dining tables in the main hall</li></ul> |
 | Beverage Bar      | <Text my={20}>$500 </Text>     | <Text my={20}>2   </Text>       | Staying hydrated is so important for everyone. Would you like to be known as the company that ensured the caffeine continued to flow throughout the day? If so, we'd love to have you as our Beverage Bar sponsor! Benefits include: <ul><li>The prominent display of your company information at the beverage stations</li><li>The undying appreciation from attendees keeping them caffeinated and hydrated</li></ul> |
+| Zoom Pro Subscription      | <Text my={20}>$150 </Text>     | <Text my={20}>1  </Text>       | Would you like to be known as the company that is helping us organize our online meetups? If so, we'd love to have you as our Zoom Pro Subscription sponsor! Benefits include: <ul><li>Acknowledging your support orally at the meetup</li><li>Mention of your company name in Eventbrite Ticketing Page with link to your website</li></ul> |
 | I have an idea!   | Priceless |            | Do you have an idea that we haven't thought of for sponsorship? If so, let's talk about how you feel you can get the most value out of your sponsorship. Help us help you help us! |
 
 ### Registration Statistics
