--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,9 +11,9 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>01.27.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-136435394939" target="_blank" rel="noopener noreferrer">Vue.js and TypeScript: Working Together like Peanut Butter and Jelly by Rob Richardson</a></Text>
-
 <Text my={20}>02.09.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-138290627991" target="_blank" rel="noopener noreferrer">Making Regex Readable by Bob Fornal</a></Text>
+
+<Text my={20}>02.23.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-141050771655" target="_blank" rel="noopener noreferrer">Akita as Angular State Management by Seiji</a></Text>
 
 ## Subscribe
 
