--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,9 +11,7 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>02.09.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-138290627991" target="_blank" rel="noopener noreferrer">Making Regex Readable by Bob Fornal</a></Text>
-
-<Text my={20}>02.23.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-141050771655" target="_blank" rel="noopener noreferrer">Akita as Angular State Management by Seiji</a></Text>
+<Text my={20}>03.09.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-142896600579" target="_blank" rel="noopener noreferrer">Intro to Application Architecture and Scalability by Matt Eland</a></Text>
 
 ## Subscribe
 
