--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -13,6 +13,9 @@ RSVP Open for Community Meetups
 
 <Text my={20}>03.09.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-142896600579" target="_blank" rel="noopener noreferrer">Intro to Application Architecture and Scalability by Matt Eland</a></Text>
 
+
+<Text my={20}>03.23.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-143182961091" target="_blank" rel="noopener noreferrer">GraphQL VS. Bff: A Critical Perspective by Ghidersa Mihaela</a></Text>
+
 ## Subscribe
 
 <a href="http://eepurl.com/gubqeb" target="_blank" rel="noopener noreferrer">Subscribe </a>to our mailing list for updates on developer community events. 
