--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,9 +11,9 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>03.23.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-143182961091" target="_blank" rel="noopener noreferrer">GraphQL VS. Bff: A Critical Perspective by Ghidersa Mihaela</a></Text>
-
 <Text my={20}>05.11.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-147179655311" target="_blank" rel="noopener noreferrer">Best Practices for increasing the reach & equity of web products by Aaron Gustafson </a></Text>
+
+<Text my={20}>05.25.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-148495990505" target="_blank" rel="noopener noreferrer">End-to-End State Management for Offline-First Web Applications using Jinaga by Michael L Perry </a></Text>
 
 ## Subscribe
 
