--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -13,6 +13,8 @@ RSVP Open for Community Meetups
 
 <Text my={20}>04.20.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-148670901669" target="_blank" rel="noopener noreferrer">Sharing Resources Across Domains by Avinash Dalvi</a></Text>
 
+<Text my={20}>04.28.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-vuejs-online-meetup-tickets-150547446465" target="_blank" rel="noopener noreferrer">Forms Management and Validation in VueJs by Aaron Saunders</a></Text>
+
 <Text my={20}>05.11.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-147179655311" target="_blank" rel="noopener noreferrer">Best Practices for increasing the reach & equity of web products by Aaron Gustafson </a></Text>
 
 <Text my={20}>05.25.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-148495990505" target="_blank" rel="noopener noreferrer">End-to-End State Management for Offline-First Web Applications using Jinaga by Michael L Perry </a></Text>
