Updated Call for Speakers
Updated Call for Speakers

--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -22,9 +22,11 @@ As a speaker you can submit maximum of four proposals.
 
 We have two options available for speakers to submit proposals for: 
 
-<Text my={20}>Workshops (Day 1): 4 hr duration in length, focused on hands on instruction in a classroom style setting.</Text>
+<Text my={20}>Workshops (Day 1) Virtual: 4 hr duration in length, focused on hands on instruction in a classroom style setting.</Text>
 
 <Text my={20}>Sessions (Day 2): 50 minutes in length, standard presentation format.</Text>
+
+Note: At present, we plan for Sessions day to be in person in Columbus. However, this may change to virtual depending on the COVID situation.
 
 ### Themes and Levels of Expertise
 
@@ -52,12 +54,12 @@ Your talk could:
 ### Speaker Selection Process
 
 <Text my={20}>1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)</Text>
-<Text my={20}>2.  You submit a completed application by 04/10/2020 (required)</Text>
-<Text my={20}>3.  You submit a completed Community Assistance form by 04/10/2020 (optional, see “Financial Assistance” section)</Text>
-<Text my={20}>4.  We send out the first round of speaker acceptance emails by 04/27/2020 </Text>
-<Text my={20}>5.  We send out the second round of speaker acceptance emails by 05/04/2020 </Text>
-<Text my={20}>6.  You request feedback on your proposal by 05/10/2020 (optional)</Text>
-<Text my={20}>7.  We see you at the conference on 08/13/2020 - 08/14/2020!</Text>
+<Text my={20}>2.  You submit a completed application by 05/21/2021 (required)</Text>
+<Text my={20}>3.  You submit a completed Community Assistance form by 05/21/2021 (optional, see “Financial Assistance” section)</Text>
+<Text my={20}>4.  We send out the first round of speaker acceptance emails by 06/01/2021 </Text>
+<Text my={20}>5.  We send out the second round of speaker acceptance emails by 06/15/2021 </Text>
+<Text my={20}>6.  You request feedback on your proposal by 06/22/2021 (optional)</Text>
+<Text my={20}>7.  We see you at the conference on 08/19/2021 - 08/20/2021!</Text>
 
 If you will need financial assistance, reach out to our CFP team before proposal end date. While we cannot guarantee any level of assistance, we will do all that we can based upon available sponsorship and ticket dollars.
 
@@ -69,7 +71,7 @@ Speakers will receive a free admission to JS&Friends Conference and Workshops.
 
 <Text my={20}>
 If you have any special needs or circumstances we should know about, please contact us as early as possible,
-but no later than 04/10/2020! </Text>
+but no later than 05/21/2021! </Text>
 
 A special need might include (but certainly isn’t limited to)
 an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
@@ -77,7 +79,7 @@ Please contact us at <a href="mailto:cfp@javascriptandfriends.com">cfp@javascrip
 
 ### Financial Assistance
 
-In order to keep admission prices as low as possible for our second year, we strongly encourage speakers
+In order to keep admission prices as low as possible for our third year, we strongly encourage speakers
 to ask for travel assistance from employers. However, we acknowledge that this often results in a far less
 diverse group of speakers.
 
