Updated CFP Links
Updated Dependencies

--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -54,9 +54,9 @@ Your talk could:
 ### Speaker Selection Process
 
 <Text my={20}>1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)</Text>
-<Text my={20}>2.  You submit a completed application by 05/21/2021 (required)</Text>
-<Text my={20}>3.  You submit a completed Community Assistance form by 05/21/2021 (optional, see “Financial Assistance” section)</Text>
-<Text my={20}>4.  We send out the first round of speaker acceptance emails by 06/01/2021 </Text>
+<Text my={20}>2.  You submit a completed application by 05/28/2021 (required)</Text>
+<Text my={20}>3.  You submit a completed Community Assistance form by 05/28/2021 (optional, see “Financial Assistance” section)</Text>
+<Text my={20}>4.  We send out the first round of speaker acceptance emails by 06/07/2021 </Text>
 <Text my={20}>5.  We send out the second round of speaker acceptance emails by 06/15/2021 </Text>
 <Text my={20}>6.  You request feedback on your proposal by 06/22/2021 (optional)</Text>
 <Text my={20}>7.  We see you at the conference on 08/19/2021 - 08/20/2021!</Text>
@@ -71,7 +71,7 @@ Speakers will receive a free admission to JS&Friends Conference and Workshops.
 
 <Text my={20}>
 If you have any special needs or circumstances we should know about, please contact us as early as possible,
-but no later than 05/21/2021! </Text>
+but no later than 05/28/2021! </Text>
 
 A special need might include (but certainly isn’t limited to)
 an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
@@ -88,6 +88,13 @@ please contact <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfr
 
 If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
 Contact <a href="mailto:sponsors@javascriptandfriends.com">sponsors@javascriptandfriends.com</a> for more info!
+
+
+### COVID Policy
+We will comply with local city and state health guidelines for large events. 
+All speakers and attendees will be informed what to expect as the date gets closer.
+At this time Ohio Health Department has released new guidance which can be <a href="https://coronavirus.ohio.gov/static/publicorders/rev-2nd-final-amended-do-soc-dist-remove-face-cover-21.pdf" target="_blank" rel="noopener noreferrer">found here</a>.
+
 
 ### New Speakers!
 
