Updated CFP Broken Links
Include Sessionize Links

--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -106,4 +106,6 @@ We specifically recommend the section entitled “How to write a good submission
 If you would like a human mentor, we can help connect you with a mentor.
 Please let us know at <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfriends.com</a>
 
+<a href="https://sessionize.com/jsfriendsconf2021/" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
+
 </Card>
