--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -12,7 +12,8 @@ import Text from "../components/Text";
 RSVP Open for Community Meetups 
 
 <Text my={20}>06.08.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-157249323961" target="_blank" rel="noopener noreferrer">Lazy Loading Modules in Angular by Jay</a></Text>
-
+  
+<Text my={20}>06.30.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-157700098239" target="_blank" rel="noopener noreferrer">Hosting Your Own Video In the Front End by Becky Peltz</a></Text>
 
 
 ## Subscribe
