--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -42,7 +42,7 @@ in bringing this about.
 
 
 
-| Add-On            | Cost      | Availalble | Benefits |
+| Add-On            | Cost      | Available | Benefits |
 |-------------------|-----------|------------|----------|
 | Speaker Dinner    | <Text my={20}>$1,500  </Text>  | <Text my={20}>1   </Text>       | We love our speakers. Without them, we cannot do things like this. Sponsoring the Speaker Dinner your company will get: <ul><li>Exclusive Logo placement at Speaker Dinner</li><li>A short introduction of company</li><li>Attendance for 2-3 of your reps for opportunity to mingle with the speakers</li></ul> |
 | Lanyards          | <Text my={20}>$500 </Text>     | <Text my={20}>1  </Text>        | Your company logo on attendee lanyards |
