--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,9 +11,9 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>06.08.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-157249323961" target="_blank" rel="noopener noreferrer">Lazy Loading Modules in Angular by Jay</a></Text>
+<Text my={20}>07.15.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-engineering-leaders-series-tickets-162547400651" target="_blank" rel="noopener noreferrer">Engineering Leaders Series with David Lambert</a></Text>
   
-<Text my={20}>06.30.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-157700098239" target="_blank" rel="noopener noreferrer">Hosting Your Own Video In the Front End by Becky Peltz</a></Text>
+<Text my={20}>07.22.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-161691849675" target="_blank" rel="noopener noreferrer">Learning React with Ceora</a></Text>
 
 
 ## Subscribe
