Updated code of conduct and sponsors
Updated details

--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -33,8 +33,25 @@ and will only be allowed to return without the weapon.
 ### No-Alcohol Policy
 
 We expect all to comply with No-Alcohol policy at conference venue or workshop.
-
 Attendees are further expected to comply with all state and local laws on this matter.
+
+### COVID19 Policy
+
+For the safety of everyone at the conference, we expect all to maintain social distancing at all times and practice self hygeine.
+
+We expect all to adhere with health policies enforced by the venue and local health authorities. While we do not enforce a mask mandate, Individuals who prefer to wear masks are encouraged to do so. 
+Wearing masks is a personal choice and we want everyone to be treated equally with respect.
+
+All participants, speakers, sponsors and staff should refrain themselves from attending the conference if they exhibit COVID19 symptoms.
+
+In case of exhibiting COVID19 symptoms, we strongly suggest them to get tested and consult their doctor and share the results with conference organizing team
+if tested positive by reporting to <a href="mailto:report@javascriptandfriends.com">report@javascriptandfriends.com</a>. 
+
+Conference team will notify all participants, speakers, sponsors and staff of the same. 
+
+Please check the below link for details on saftey implementations at the venue.
+
+<a href="https://www.quest-centers.com/covid-19/" target="_blank" rel="noopener noreferrer">Quest Conference Center Safety Implementations</a>
 
 This code of conduct is applicable to all conference attendees, venue staff,
 volunteers, sponsors staff, speakers and organizers.
