--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -37,7 +37,7 @@ Attendees are further expected to comply with all state and local laws on this m
 
 ### COVID19 Policy
 
-For the safety of everyone at the conference, we expect all to maintain social distancing at all times and practice self hygeine.
+For the safety of everyone at the conference, we expect all to maintain social distancing at all times and practice self hygiene.
 
 We expect all to adhere with health policies enforced by the venue and local health authorities. While we do not enforce a mask mandate, Individuals who prefer to wear masks are encouraged to do so. 
 Wearing masks is a personal choice and we want everyone to be treated equally with respect.
