Included Daugherty details
Included Daugherty details

--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -42,7 +42,7 @@ For the safety of everyone at the conference, we expect all to maintain social d
 We expect all to adhere with health policies enforced by the venue and local health authorities. While we do not enforce a mask mandate, Individuals who prefer to wear masks are encouraged to do so. 
 Wearing masks is a personal choice and we want everyone to be treated equally with respect.
 
-All participants, speakers, sponsors and staff should refrain themselves from attending the conference if they exhibit COVID19 symptoms.
+All participants, speakers, sponsors and staff should refrain themselves from attending the conference if they exhibit COVID19 symptoms(such as cough, shortness of breath, fever, or loss of sense of smell or taste) or have been in close contact with any person exhibiting COVID19 symptoms in the last 14 days before the conference day or have been confirmed or suspected COVID19 case and received treatment in the last 7 days before the conference day.
 
 In case of exhibiting COVID19 symptoms, we strongly suggest them to get tested and consult their doctor and share the results with conference organizing team
 if tested positive by reporting to <a href="mailto:report@javascriptandfriends.com">report@javascriptandfriends.com</a>. 
