Updated speakers and workshops
Updated speakers and workshops

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -42,15 +42,11 @@ import { Link as ButtonLink } from "../components/Button";
 <Hidden as="h1">Speakers</Hidden>
 <Card>
 <Text>
-Friends join us on Aug-19-2021 and Aug-20-2021 from 08:00 AM US EDT to 05:30 PM US EDT.
+Friends join us on Aug-19-2021 and Aug-20-2021 at this year's conference.
 </Text>
 <br></br>
 <Text>
-Workshop Day - Aug-19-2021 - Virtual 
-</Text>
-<br></br>
-<Text>
-Conference Day - Aug-20-2021 - Quest Conference Center, Columbus, Ohio
+Conference Day - Aug-20-2021 - Quest Conference Center, Columbus, Ohio - 07:00 AM US EDT to 06:00 PM US EDT.
 </Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
