--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -3,22 +3,21 @@ import Layout from "../components/layout";
 import Card from "../components/Card"; 
 import { Flex } from "@rebass/grid"; 
 import Workshop from "../components/Workshop"; 
-
-
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
+import seijiImage from "../components/SpeakerImages/seiji";
 import { Link as ButtonLink } from "../components/Button";
 
 <Hidden as="h1">Speakers</Hidden>
 <Card>
 <Text>
-Friends join us on Aug-13-2020 from 09:00 AM to 05:30 PM US EDT. Attendees can choose to attend any half day workshop of their choice.
-Not able to attend a workshop live, we will share the recordings of all paid workshops to registerred attendees.
+Friends join us on Aug-19-2021 from 08:30 AM US EDT to 05:30 PM US EDT. Attendees can choose to attend any half day workshop of their choice.
+Not able to attend a workshop live, we will share the recordings of all paid workshops to registered attendees.
 </Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 <ButtonLink
-            href="https://www.eventbrite.com/e/javascript-and-friends-conference-2020-registration-109564969774"
+            href="https://www.eventbrite.com/e/javascript-and-friends-conference-2021-tickets-163395816285"
             alignSelf="center"
             mr={40}
             target="_blank" rel="noopener noreferrer"
@@ -29,7 +28,13 @@ Not able to attend a workshop live, we will share the recordings of all paid wor
 
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 
-
+<Workshop name="Seiji Ralph Villafranca" Image={seijiImage} 
+twitter="SageVillafranca" 
+linkedin="seiji-ralph-villafranca" 
+talk={{ title: "Angular and Nest (The perfect Match)", 
+description: "Join this workshop to learn how to create a full stack application using Angular and Nest JS and what are the common concepts that both frameworks share" }} 
+ timing ="8.30 AM EDT to 12.30 PM EDT"
+ />
 
 
 </Flex>
