--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -13,7 +13,6 @@ import burtonsmithImage from "../components/SpeakerImages/burton_smith";
 import cruxImage from "../components/SpeakerImages/crux_conception";
 import danielafonsoImage from "../components/SpeakerImages/daniel_afonso";
 import daveStokesImage from "../components/SpeakerImages/dave_stokes";
-import doniaRobinsonImage from "../components/SpeakerImages/donia_robinson";
 import dmitryvinnikImage from "../components/SpeakerImages/dmitry_vinnik";
 import ericbishardImage from "../components/SpeakerImages/eric_bishard";
 import ericPotterImage from "../components/SpeakerImages/eric_potter";
@@ -35,6 +34,7 @@ import seijiImage from "../components/SpeakerImages/seiji";
 import tadehhakopianImage from "../components/SpeakerImages/tadeh_hakopian";
 import tylerclarkImage from "../components/SpeakerImages/tyler_clark";
 import williamImage from "../components/SpeakerImages/william_shepherd";
+import simonImage from "../components/SpeakerImages/simon_prickett";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -111,11 +111,6 @@ twitter="stoker"
 linkedin="davidmstokes" 
  />
 
- <Speaker name="Donia Robinson" Image={doniaRobinsonImage} 
-twitter="" 
-linkedin="doniarobinson" 
- />
- 
 <Speaker name="Dmitry Vinnik" Image={dmitryvinnikImage} 
 twitter="DmitryVinnik" 
 linkedin="dmitry-vinnik" 
@@ -210,6 +205,11 @@ linkedin="samsnasr"
   <Speaker name="Seiji Ralph Villafranca" Image={seijiImage} 
 twitter="SageVillafranca" 
 linkedin="seiji-ralph-villafranca" 
+ />
+
+  <Speaker name="Simon Prickett" Image={simonImage} 
+twitter="simon_prickett" 
+linkedin="simonprickett" 
  />
 
 
