--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -6,6 +6,7 @@ import Workshop from "../components/Workshop";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import seijiImage from "../components/SpeakerImages/seiji";
+import simonImage from "../components/SpeakerImages/simon_prickett";
 import { Link as ButtonLink } from "../components/Button";
 
 <Hidden as="h1">Speakers</Hidden>
@@ -36,6 +37,13 @@ description: "Join this workshop to learn how to create a full stack application
  timing ="8.30 AM EDT to 12.30 PM EDT"
  />
 
+<Workshop name="Simon Prickett" Image={simonImage} 
+twitter="simon_prickett" 
+linkedin="simonprickett" 
+talk={{ title: "The Node.js Redis Crash Course", 
+description: "Join Simon Prickett, Senior Curriculum Engineer at Redis Labs for a deep dive into application development and data modeling with Redis, Node.js and the Express framework.\r\n\r\nIn this workshop, you\'ll follow along as Simon shows how to use the popular Redis data store and cache in a Node.js \/ Express application. You\'ll have access to a GitHub repo with sample code and exercises that you can attempt at your own pace.\r\n\r\nWe\'ll look at how to get up and running with Redis, examine different ways of storing data in Redis then move on to see how that data can be searched and indexed in ways not commonly associated with a key value store. Finally, we\'ll see how Redis helps us tackle some issues associated with scaling our application - session management, caching and saving memory through the use of a probabilistic data structure.\r\n\r\nThis workshop is accompanied by a complete online course including video and text-based training plus small coding challenges." }} 
+ timing ="8.30 AM EDT to 12.30 PM EDT"
+ />
 
 </Flex>
 
