Updated mask guidance

--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -39,8 +39,7 @@ Attendees are further expected to comply with all state and local laws on this m
 
 For the safety of everyone at the conference, we expect all to maintain social distancing at all times and practice self hygiene.
 
-We expect all to adhere with health policies enforced by the venue and local health authorities. While we do not enforce a mask mandate, Individuals who prefer to wear masks are encouraged to do so. 
-Wearing masks is a personal choice and we want everyone to be treated equally with respect.
+We expect all to adhere with health policies enforced by the venue and local health authorities. We expect all to follow the latest health advisory issued by Columbus Public Health. As of August 05,2021 Columbus Public Health and Franklin County Public Health issued a mask advisory urging everyone to wear a mask indoors and in crowded areas regardless of vaccine status until further notice. The advisory follows the Centers for Disease Control and Prevention’s (CDC) guidance for an area with substantial community spread of COVID-19.More details on health advisory can be found <a href="https://vax2normal.org/maskadvisory/" target="_blank" rel="noopener noreferrer">here</a>.
 
 All participants, speakers, sponsors and staff should refrain themselves from attending the conference if they exhibit COVID19 symptoms(such as cough, shortness of breath, fever, or loss of sense of smell or taste) or have been in close contact with any person exhibiting COVID19 symptoms in the last 14 days before the conference day or have been confirmed or suspected COVID19 case and received treatment in the last 7 days before the conference day.
 
