--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -34,6 +34,7 @@ import tadehhakopianImage from "../components/SpeakerImages/tadeh_hakopian";
 import tylerclarkImage from "../components/SpeakerImages/tyler_clark";
 import williamImage from "../components/SpeakerImages/william_shepherd";
 import simonImage from "../components/SpeakerImages/simon_prickett";
+import caleImage from "../components/SpeakerImages/cale_riggs";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -98,6 +99,11 @@ linkedin="burton-smith-48132a34"
  <Speaker name="Crux Conception" Image={cruxImage} 
 twitter="CruxConception" 
 linkedin="crux-conception" 
+ />
+
+ <Speaker name="Cale Riggs" Image={caleImage} 
+twitter="caleriggs" 
+linkedin="caleriggs" 
  />
 
  <Speaker name="Daniel Afonso" Image={danielafonsoImage} 
