Include Promo Registration Link

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -51,7 +51,7 @@ Conference Day - Aug-20-2021 - Quest Conference Center, Columbus, Ohio - 07:00 A
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 <ButtonLink
-            href="https://www.eventbrite.com/e/javascript-and-friends-conference-2021-tickets-163395816285"
+            href="https://www.eventbrite.com/e/javascript-and-friends-conference-2021-tickets-163395816285?discount=JSFriendsLimited2021"
             alignSelf="center"
             mr={40}
             target="_blank" rel="noopener noreferrer"
