--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -18,7 +18,7 @@ Not able to attend a workshop live, we will share the recordings of all paid wor
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 <ButtonLink
-            href="https://www.eventbrite.com/e/javascript-and-friends-conference-2021-tickets-163395816285"
+            href="https://www.eventbrite.com/e/javascript-and-friends-conference-2021-tickets-163395816285?discount=JSFriendsLimited2021"
             alignSelf="center"
             mr={40}
             target="_blank" rel="noopener noreferrer"
