--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -42,12 +42,9 @@ import { Link as ButtonLink } from "../components/Button";
 <Hidden as="h1">Speakers</Hidden>
 <Card>
 <Text>
-Friends join us on Aug-19-2021 and Aug-20-2021 at this year's conference.
+Friends join us on Aug-19-2021 and Aug-20-2021 at this year's conference virtually. Registration is required to receive conference details.
 </Text>
 <br></br>
-<Text>
-Conference Day - Aug-20-2021 - Quest Conference Center, Columbus, Ohio - 07:00 AM US EDT to 06:00 PM US EDT.
-</Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 <ButtonLink
