Update November Event

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,10 +11,8 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>07.15.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-engineering-leaders-series-tickets-162547400651" target="_blank" rel="noopener noreferrer">Engineering Leaders Series with David Lambert</a></Text>
+<Text my={20}>11.17.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-203478639087" target="_blank" rel="noopener noreferrer">Maximum web performance with Cloudflare by Jon Kuperman</a></Text>
   
-<Text my={20}>07.22.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-161691849675" target="_blank" rel="noopener noreferrer">Learning React with Ceora</a></Text>
-
 
 ## Subscribe
 
