--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -5,13 +5,13 @@ import Text from "../components/Text";
 
 <Card>
 
-<Text my={20}>Call for Speakers now open for 2021 Developer Community Meetups. <a href="https://forms.gle/25rCPEE6WwsjMQSs7" target="_blank" rel="noopener noreferrer">Fill in your details to get scheduled</a>.</Text>
+<Text my={20}>Call for Speakers now open for 2022 Developer Community Meetups. <a href="https://forms.gle/25rCPEE6WwsjMQSs7" target="_blank" rel="noopener noreferrer">Fill in your details to get scheduled</a>.</Text>
 
 ## Community Events
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>11.17.2021  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-203478639087" target="_blank" rel="noopener noreferrer">Maximum web performance with Cloudflare by Jon Kuperman</a></Text>
+<Text my={20}>02.10.2022  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-249658504307" target="_blank" rel="noopener noreferrer">Finding the bug in “UX == ‘the art of making things look pretty’” by  Claudio Lassala</a></Text>
   
 
 ## Subscribe
