--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -20,13 +20,9 @@ As a speaker you can submit maximum of four proposals.
 
 ### Format
 
-We have two options available for speakers to submit proposals for: 
+<Text my={20}>Sessions: 50 minutes in length, standard presentation format.</Text>
 
-<Text my={20}>Workshops (Day 1) Virtual: 4 hr duration in length, focused on hands on instruction in a classroom style setting.</Text>
-
-<Text my={20}>Sessions (Day 2): 50 minutes in length, standard presentation format.</Text>
-
-Note: At present, we plan for Sessions day to be in person in Columbus. However, this may change to virtual depending on the COVID situation.
+Note: At present, we plan for Sessions day to be in person in Columbus, Ohio. However, this may change to virtual depending on the COVID situation.
 
 ### Themes and Levels of Expertise
 
@@ -54,12 +50,11 @@ Your talk could:
 ### Speaker Selection Process
 
 <Text my={20}>1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)</Text>
-<Text my={20}>2.  You submit a completed application by 05/28/2021 (required)</Text>
-<Text my={20}>3.  You submit a completed Community Assistance form by 05/28/2021 (optional, see “Financial Assistance” section)</Text>
-<Text my={20}>4.  We send out the first round of speaker acceptance emails by 06/07/2021 </Text>
-<Text my={20}>5.  We send out the second round of speaker acceptance emails by 06/15/2021 </Text>
-<Text my={20}>6.  You request feedback on your proposal by 06/22/2021 (optional)</Text>
-<Text my={20}>7.  We see you at the conference on 08/19/2021 - 08/20/2021!</Text>
+<Text my={20}>2.  You submit a completed application by 02/13/2022 11:59 PM US EST (required)</Text>
+<Text my={20}>3.  You submit a completed Community Assistance form by 02/13/2022 11:59 PM US EST(optional, see “Financial Assistance” section)</Text>
+<Text my={20}>4.  We send out the first round of speaker acceptance emails by 02/28/2022 </Text>
+<Text my={20}>5.  We send out the second round of speaker acceptance emails by 03/07/2022 </Text>
+<Text my={20}>6.  We see you at the conference on 07/29/2022!</Text>
 
 If you will need financial assistance, reach out to our CFP team before proposal end date. While we cannot guarantee any level of assistance, we will do all that we can based upon available sponsorship and ticket dollars.
 
@@ -71,7 +66,7 @@ Speakers will receive a free admission to JS&Friends Conference and Workshops.
 
 <Text my={20}>
 If you have any special needs or circumstances we should know about, please contact us as early as possible,
-but no later than 05/28/2021! </Text>
+but no later than 02/13/2022! </Text>
 
 A special need might include (but certainly isn’t limited to)
 an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
@@ -79,21 +74,20 @@ Please contact us at <a href="mailto:cfp@javascriptandfriends.com">cfp@javascrip
 
 ### Financial Assistance
 
-In order to keep admission prices as low as possible for our third year, we strongly encourage speakers
+In order to keep admission prices as low as possible for our fourth year, we strongly encourage speakers
 to ask for travel assistance from employers. However, we acknowledge that this often results in a far less
 diverse group of speakers.
 
 If you will be unable to travel to and attend JS&Friends Conf without financial assistance,
-please contact <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfriends.com</a>.
+please contact <a href="mailto:cfp@javascriptandfriends.com" rel="noopener noreferrer">cfp@javascriptandfriends.com</a>.
 
 If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
-Contact <a href="mailto:sponsors@javascriptandfriends.com">sponsors@javascriptandfriends.com</a> for more info!
+Contact <a href="mailto:sponsors@javascriptandfriends.com" rel="noopener noreferrer">sponsors@javascriptandfriends.com</a> for more info!
 
 
 ### COVID Policy
 We will comply with local city and state health guidelines for large events. 
 All speakers and attendees will be informed what to expect as the date gets closer.
-At this time Ohio Health Department has released new guidance which can be <a href="https://coronavirus.ohio.gov/static/publicorders/rev-2nd-final-amended-do-soc-dist-remove-face-cover-21.pdf" target="_blank" rel="noopener noreferrer">found here</a>.
 
 
 ### New Speakers!
@@ -104,7 +98,7 @@ in their <a href="http://www.codemash.org/call-speakers/" target="_blank" rel="n
 We specifically recommend the section entitled “How to write a good submission.”
 
 If you would like a human mentor, we can help connect you with a mentor.
-Please let us know at <a href="mailto:cfp@javascriptandfriends.com">cfp@javascriptandfriends.com</a>
+Please let us know at <a href="mailto:cfp@javascriptandfriends.com" rel="noopener noreferrer">cfp@javascriptandfriends.com</a>
 
-
+<a href="https://sessionize.com/javascript--friends-conference-2022" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
 </Card>
