--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -11,20 +11,20 @@ import Text from "../components/Text";
 <img src={sponsorImage} style="display: block; margin-left: auto;  margin-right: auto;  width: 50%;" />
 
 We are a volunteer-run developer conference in the Columbus, OH area with a focus on JavaScript based technologies.
-It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Thursday, August 19, 2021 and Friday, August 20, 2021!
+It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Friday, July 29, 2022!
 Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts
 and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive,
 and dynamic tech scene throughout the mid-west and beyond.
 
 Here's your chance to contribute to that mission! We're looking for the best companies to partner with us and help to make the
-Third Annual JavaScript and Friends Conference a success. And with your contribution, it will be!
+Fourth Annual JavaScript and Friends Conference a success. And with your contribution, it will be!
 
 Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers
 in bringing this about.
 
 |                                               | Platinum      | Gold             | Silver            | Bronze    |
 | :-------------------------------------------- | :-----------: | :--------------: | :---------------: | :-------: |
-| # Available                                   | <Text my={20}>2</Text>             | <Text my={20}>3</Text>                | <Text my={20}>4 </Text>                |<Text my={20}> 6   </Text>      |
+| # Available                                   | <Text my={20}>1</Text>             | <Text my={20}>2</Text>                | <Text my={20}>4 </Text>                |<Text my={20}> 6   </Text>      |
 | Company Logo and Description on our website   | ✅            | ✅                | ✅                | Logo Only |
 | Number of Complimentary Tickets               |<Text my={20}> 4   </Text>          | <Text my={20}>2 </Text>               |  <Text my={20}>2  </Text>   |           |
 | 10% off Additional Conference Passes          | ✅            | 🔴                | 🔴                | 🔴        |
@@ -54,6 +54,8 @@ in bringing this about.
 
 ### Registration Statistics
 
+<Text my={20}>2021 - Conference and Workshop Registrations - 150 Attendees excluding speakers and volunteers</Text>
+
 <Text my={20}>2020 - Conference and Workshop Registrations - 385 Attendees excluding speakers and volunteers</Text>
 
 <Text my={20}>2019 - Conference and Workshop Registrations - 164 Attendees including speakers and volunteers</Text>
@@ -61,9 +63,12 @@ in bringing this about.
 ### Where is my money going?
 
 Proceeds from JS&Friends will be used to help cultivate the developer community in the Midwestern United States and beyond.
-Since this is our third year, this could mean putting the money into expanded speaker and attendee benefits and outreach for next year.
+Since this is our fourth year, this could mean putting the money into expanded speaker and attendee benefits and outreach for next year.
+
 It could mean helping aspiring programmers through bootcamp scholarships.
+
 It could mean sponsoring local Meetup groups around JavaScript and related technologies.
+
 We’re excited about the possibilities, and we welcome your input!
 
 None of these sponsorship tiers fit your needs? Have more questions? Reach out to the Sponsorship team at <a href="mailto:sponsors@javascriptandfriends.com">sponsors@javascriptandfriends.com</a>.
