--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,9 +11,8 @@ import Text from "../components/Text";
 
 RSVP Open for Community Meetups 
 
-<Text my={20}>02.10.2022  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-249658504307" target="_blank" rel="noopener noreferrer">Finding the bug in “UX == ‘the art of making things look pretty’” by  Claudio Lassala</a></Text>
+<Text my={20}>03.17.2022  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-277255206787" target="_blank" rel="noopener noreferrer">Busy TypeScript Developers Guide to the TypeScript Type System by Maina Wycliffe</a></Text>
   
-<Text my={20}>02.24.2022  <a href="https://www.eventbrite.com/e/javascript-and-friends-online-meetup-tickets-253512792587" target="_blank" rel="noopener noreferrer">How to add push notifications into your React app by Pato</a></Text>
 
 
 ## Subscribe
