--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -29,6 +29,33 @@ as well as any other item used for the purpose of causing injury or harm to othe
 
 Anyone seen in possession of one of these items will be asked to leave immediately
 and will only be allowed to return without the weapon.
+  
+### No-Alcohol Policy
+
+We expect all to comply with No-Alcohol policy at conference venue.
+Attendees are further expected to comply with all state and local laws on this matter.
+
+### COVID19 Policy
+
+For the safety of everyone at the conference, we expect all to maintain social distancing at all times and practice self hygiene.
+
+We expect all to adhere with health policies enforced by the venue and local health authorities. We expect all to follow the latest health advisory issued by Columbus Public Health and Franklin County Public Health. As of March 2022 Franklin County is under Green status with respect to CDC it is categorized as Low. Franklin County Public Health advisory follows the Centers for Disease Control and Prevention’s (CDC) guidance for an area with substantial community spread of COVID-19.More details on health advisory can be found <a href="https://vax2normal.org/franklin-county-community-level-is-green/" target="_blank" rel="noopener noreferrer">here</a>.
+
+Wearing masks is a personal choice and we encourage everyone attending the conference in-person to wear masks if you feel comfortable. Though we do not require a proof of vaccination, we encourage everyone to get vaccinated if you can before attending the conference. 
+
+If you are unvaccinated, we require you to wear masks as per latest <a href="https://coronavirus.ohio.gov/resources/news-releases-news-you-can-use/covid-19-update-06-01-21" target="_blank" rel="noopener noreferrer">Ohio state guidance.</a>
+
+All participants, speakers, sponsors and staff should refrain themselves from attending the conference if they exhibit COVID19 symptoms(such as cough, shortness of breath, fever, or loss of sense of smell or taste) or have been in close contact with any person exhibiting COVID19 symptoms in the last 14 days before the conference day or have been confirmed or suspected COVID19 case and received treatment in the last 7 days before the conference day.
+
+In case of exhibiting COVID19 symptoms after attending the conference in-person, we strongly suggest them to get tested and consult their doctor and share the results with conference organizing team if tested positive by reporting to <a href="mailto:report@javascriptandfriends.com">report@javascriptandfriends.com</a>. 
+
+Conference team will notify all participants, speakers, sponsors and staff of the same. 
+
+Please check the below link for details on saftey implementations at the venue.
+
+<a href="https://www.quest-centers.com/covid-19/" target="_blank" rel="noopener noreferrer">Quest Conference Center Safety Implementations</a>
+
+This code of conduct is applicable to all conference attendees, venue staff, volunteers, sponsors staff, speakers and organizers.
 
 ### What is unacceptable behavior?
 
