Updated latest changes
Updated latest changes

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -10,7 +10,6 @@ import Alejandro from "../components/SpeakerImages/Alejandro";
 import AlexLakatos from "../components/SpeakerImages/AlexLakatos";
 import Bekah from "../components/SpeakerImages/Bekah";
 import BrianBoyer from "../components/SpeakerImages/BrianBoyer";
-import BrianMcKeiver from "../components/SpeakerImages/BrianMcKeiver";
 import CassandraFaris from "../components/SpeakerImages/CassandraFaris";
 import Cecelia from "../components/SpeakerImages/Cecelia";
 import Chinenye from "../components/SpeakerImages/Chinenye";
@@ -18,12 +17,12 @@ import DaveFancher from "../components/SpeakerImages/DaveFancher";
 import Harshil from "../components/SpeakerImages/Harshil";
 import Joel from "../components/SpeakerImages/Joel";
 import JordanPowell from "../components/SpeakerImages/JordanPowell";
+import Guy from "../components/SpeakerImages/Guy";
 import MichaelRichardson from "../components/SpeakerImages/MichaelRichardson";
 import Phillippe from "../components/SpeakerImages/Phillippe";
 import RaymondCamden from "../components/SpeakerImages/RaymondCamden";
 import RussellSkaggs from "../components/SpeakerImages/RussellSkaggs";
 import SarahDutkiewicz from "../components/SpeakerImages/SarahDutkiewicz";
-import ScottStroz from "../components/SpeakerImages/ScottStroz";
 import SeanLawrenz from "../components/SpeakerImages/SeanLawrenz";
 import TarynMusgrave from "../components/SpeakerImages/TarynMusgrave";
 import ToddLibby from "../components/SpeakerImages/ToddLibby";
@@ -42,12 +41,12 @@ import { Link as ButtonLink } from "../components/Button";
 <Speaker name="Bekah" Image={Bekah}  twitter="BekahHW" linkedin="bekah-hawrot-weigel" />
 <Speaker name="Bob Fornal" Image={bobFornalImage} twitter="rfornal" linkedin="rfornal"  /> 
 <Speaker name="Brian Boyer" Image={BrianBoyer} twitter="" linkedin="brianlboyer"  />
-<Speaker name="Brian McKeiver" Image={BrianMcKeiver} twitter="mcbeev" linkedin="brianmckeiver"/>
 <Speaker name="Crux Conception" Image={cruxImage} twitter="CruxConception" linkedin="crux-conception"  />
 <Speaker name="Cassandra Faris" Image={CassandraFaris} twitter="cassandrafaris" linkedin=""/>
 <Speaker name="Cecelia Martinez" Image={Cecelia} twitter="ceceliacreates" linkedin="ceceliamartinez"  />
 <Speaker name="Chinenye Onuegbu" Image={Chinenye} twitter="xkizer" linkedin=""  />
 <Speaker name="Dave Fancher" Image={DaveFancher} twitter="davefancher" linkedin="davefancher"/>
+<Speaker name="Guy Royse" Image={Guy} twitter="guyroyse" linkedin="groyse"/>
 <Speaker name="Jordan Powell" Image={JordanPowell} twitter="jordanpowell88" linkedin="jpdesigning"  />
 <Speaker name="Joel Lord" Image={Joel} twitter="joel__lord" linkedin="joel-lord"  />
 <Speaker name="Harshil Agrawal" Image={Harshil} twitter="harshil1712" linkedin=""  />
@@ -57,7 +56,6 @@ import { Link as ButtonLink } from "../components/Button";
 <Speaker name="Raymond Camden" Image={RaymondCamden} twitter="raymondcamden" linkedin="raymondcamden"/>
 <Speaker name="Ramón Huidobro" Image={ramonhuidobroImage} twitter="hola_soy_milk" linkedin="ramonhuidobro"  />
 <Speaker name="Sarah Dutkiewicz" Image={SarahDutkiewicz} twitter="sadukie" linkedin="sadukie"/>
-<Speaker name="Scott Stroz" Image={ScottStroz} twitter="boyzoid" linkedin="boyzoid"/>
 <Speaker name="Sean Lawrenz" Image={SeanLawrenz} twitter="Seanlaw27" linkedin="seanlawrenz"/>
 <Speaker name="Tori Brenneison" Image={ToriBrenneison} twitter="not_unambitious" linkedin="toribrenneison"/>
 <Speaker name="Todd Libby" Image={ToddLibby} twitter="toddlibby" linkedin="todd-libby"/>
