--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -28,6 +28,7 @@ import TarynMusgrave from "../components/SpeakerImages/TarynMusgrave";
 import ToddLibby from "../components/SpeakerImages/ToddLibby";
 import ToriBrenneison from "../components/SpeakerImages/ToriBrenneison";
 import Vitaliy from "../components/SpeakerImages/Vitaliy";
+import BrandonR from "../components/SpeakerImages/BrandonR";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -40,18 +41,16 @@ import { Link as ButtonLink } from "../components/Button";
 <Speaker name="Alejandro Mercado" Image={Alejandro}  twitter="alexmarket" linkedin="alexmarket" />
 <Speaker name="Bekah" Image={Bekah}  twitter="BekahHW" linkedin="bekah-hawrot-weigel" />
 <Speaker name="Bob Fornal" Image={bobFornalImage} twitter="rfornal" linkedin="rfornal"  /> 
+<Speaker name="Brandon Roberts" Image={BrandonR} twitter="brandontroberts" linkedin=""  />
 <Speaker name="Brian Boyer" Image={BrianBoyer} twitter="" linkedin="brianlboyer"  />
 <Speaker name="Crux Conception" Image={cruxImage} twitter="CruxConception" linkedin="crux-conception"  />
 <Speaker name="Cassandra Faris" Image={CassandraFaris} twitter="cassandrafaris" linkedin=""/>
 <Speaker name="Cecelia Martinez" Image={Cecelia} twitter="ceceliacreates" linkedin="ceceliamartinez"  />
-<Speaker name="Chinenye Onuegbu" Image={Chinenye} twitter="xkizer" linkedin=""  />
 <Speaker name="Dave Fancher" Image={DaveFancher} twitter="davefancher" linkedin="davefancher"/>
 <Speaker name="Guy Royse" Image={Guy} twitter="guyroyse" linkedin="groyse"/>
 <Speaker name="Jordan Powell" Image={JordanPowell} twitter="jordanpowell88" linkedin="jpdesigning"  />
 <Speaker name="Joel Lord" Image={Joel} twitter="joel__lord" linkedin="joel-lord"  />
-<Speaker name="Harshil Agrawal" Image={Harshil} twitter="harshil1712" linkedin=""  />
 <Speaker name="Michael Richardson" Image={MichaelRichardson} twitter="anaccidentaldev" linkedin="accidentaldeveloper"/>
-<Speaker name="Philippe Vaillancourt" Image={Phillippe} twitter="snowfrogdev" linkedin="philippe-vaillancourt-0a51b444"  />
 <Speaker name="Russell Skaggs" Image={RussellSkaggs} twitter="russellskaggs" linkedin="russellskaggs"/>
 <Speaker name="Ramón Huidobro" Image={ramonhuidobroImage} twitter="hola_soy_milk" linkedin="ramonhuidobro"  />
 <Speaker name="Sarah Dutkiewicz" Image={SarahDutkiewicz} twitter="sadukie" linkedin="sadukie"/>
